Add glue code for both problems

--- a/Devdraft.cbp
+++ b/Devdraft.cbp
@@ -32,6 +32,7 @@
 			<Add option="-std=c++11" />
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="main.cpp" />
 		<Unit filename="part1.cpp" />
 		<Unit filename="part2.cpp" />
 		<Extensions>
